# crc

./: .cmake-format  .cspell.yml  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  requirements.cmake
.github/workflows/: build_all.yml  cpp_unit_tests.yml  generate_artifacts.yml  maintain_tags.yml  on_push.yml  unit_tests.yml
cmake/: crc-config_template.cmake  git_utils.cmake  install.cmake  install_header_licenses.cmake  requirements.cmake
doc/: CMakeLists.txt  main.md
src/: CMakeLists.txt  crc16.c  crc32.c  crc8.c  crc_embetile_api.c  crc_version.c
src/include/embetech/: crc.h  crc16.h  crc32.h  crc8.h
tests/: CMakeLists.txt  crc_ut.cpp
